fix overflowing

--- a/src/main.scss
+++ b/src/main.scss
@@ -11,6 +11,7 @@ body {
     height: 100vh;
     width: 100vw;
     background-color: colors.$light;
+    overflow: hidden;
 
     .img-nav-button {
         position: absolute;
